objects/BMCServiceDesk__Problem_History__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Action__c</fullName>
        <description>This field stores the action linked to the problem history</description>
        <formula>BMCServiceDesk__FKAction__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the user-defined actions that are applicable to problems. User-defined actions are used to record details of the steps taken to complete the problem.</inlineHelpText>
        <label>Action~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Created_By__c</fullName>
        <description>This field stores the user name who created the problem history record</description>
        <formula>BMCServiceDesk__FKCreated_By__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <description>This field stores the details regarding the problem history record</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Duration__c</fullName>
        <description>This field stores the duration of the problem history record</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EmailConversationData__c</fullName>
        <description>Stores email addresses (From, To, and CC) of the email message.</description>
        <label>Email Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked action</description>
        <inlineHelpText>From the list of options, select the user-defined actions that are applicable to problems. User-defined actions are used to record details of the steps taken to complete the problem.</inlineHelpText>
        <label>Action</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Action__c.BMCServiceDesk__appliesToProblem__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Action__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Action__c.BMCServiceDesk__Display_In_SelfService__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Action__c</referenceTo>
        <relationshipLabel>Problem Histories</relationshipLabel>
        <relationshipName>Problem_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCreated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked user who create the problem history record</description>
        <label>Staff Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Problem_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKProblem__c</fullName>
        <description>This field stores the foreign key value of the linked problem</description>
        <label>Problem</label>
        <referenceTo>BMCServiceDesk__Problem__c</referenceTo>
        <relationshipLabel>Action History</relationshipLabel>
        <relationshipName>Problem_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Formatted_Duration__c</fullName>
        <description>This filed is used to display the hh:mm format duration on related list column</description>
        <formula>LPAD(TEXT( FLOOR((BMCServiceDesk__Duration__c / 60))),2,TEXT(0)) &amp; &quot;:&quot; &amp; LPAD(TEXT(MOD(BMCServiceDesk__Duration__c , 60)),2,TEXT(0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the value if the problem history record is active or inactive</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Note__c</fullName>
        <description>This field stores the details of the notes</description>
        <inlineHelpText>Use this field to provide details about what has been accomplished when you performed this action. The date and time is recorded for each new entry or update that you make in this field.</inlineHelpText>
        <label>Note</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Reply__c</fullName>
        <formula>IF( BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILIN&apos; || BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILOUT&apos;, HYPERLINK(&quot;javascript:if(window.location.href!=null){var stdurl= window.location.href;if(stdurl.toLowerCase().indexOf(&apos;relatedlist?&apos;)!= -1){window.location.href=&apos;/apex/BMCServiceDesk__ComposeEmailPage?recordId=&quot;+ BMCServiceDesk__FKProblem__r.Id+&quot;&amp;HistoryId=&quot;+ Id+&quot;&amp;isNew=false&amp;objectName=Problem__c&amp;standardLayout=false&amp;isConsolePage=true&amp;actionType=&quot;+ BMCServiceDesk__FKAction__r.Name +&quot;&apos;}else{window.location.href=&apos;/apex/BMCServiceDesk__ComposeEmailPage?recordId=&quot;+ BMCServiceDesk__FKProblem__r.Id+&quot;&amp;HistoryId=&quot;+ Id+&quot;&amp;isNew=false&amp;objectName=Problem__c&amp;standardLayout=true&amp;isCalledFromConsole=false&amp;stdform=true&amp;actionType=&quot;+ BMCServiceDesk__FKAction__r.Name +&quot;&apos;}}&quot;,IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/b_reply_to_client_email.png&quot;, &quot;Reply&quot;),&apos;_self&apos;),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reply</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RichTextNote__c</fullName>
        <description>This field used to store the rich Text Email conversation.</description>
        <label>RichTextNote</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the value if the problem history is syste or user record</description>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>BMCServiceDesk__Action_ID_Required</fullName>
        <active>true</active>
        <description>This rule checks for blank or empty Action</description>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKAction__c) , ISBLANK(BMCServiceDesk__FKAction__c))</errorConditionFormula>
        <errorMessage>Please enter Action.</errorMessage>
    </validationRules>
</CustomObject>